--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "firebase": "^12.2.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
